--- a/templates/bot_portal/editors.html
+++ b/templates/bot_portal/editors.html
@@ -1,6 +1,11 @@
 {% extends "layout.html" %}
 {% block title %}Управление редакторами{% endblock %}
 
+{% block head_meta %}
+<meta name="csrf-token" content="{{ csrf_token() }}">
+{% endblock %}
+{% block content %}
+
 {% block content %}
 <div class="py-12 max-w-6xl mx-auto">
     <div class="flex justify-between items-center mb-8">
